crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/storage_layout_base_slot/non_integer_type/generated/solc/0.8.29-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 2

[TypeError 6396] Error: The base slot of the storage layout must evaluate to a rational number.
   ╭─[input.sol:5:22]
   │
 5 │ contract A layout at true {}
   │                      ──┬─  
   │                        ╰─── Error occurred here.
───╯

[TypeError 6396] Error: The base slot of the storage layout must evaluate to a rational number.
   ╭─[input.sol:6:22]
   │
 6 │ contract B layout at "abc" {}
   │                      ──┬──  
   │                        ╰──── Error occurred here.
───╯
